--- a/estilo.css
+++ b/estilo.css
@@ -15,6 +15,13 @@ section {
   margin: auto;
   box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.698);
 }
+
+
+select#flista{
+  width: 150px;
+}
+
+
 footer {
   color: white;
   text-align: center;
